# activity-report-project-main

./: .dockerignore  .editorconfig  .env.example  .gitignore  .lintstagedrc.mjs  .prettierignore  .stylelintignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION-SUMMARY.md  CONTRIBUTING.md  LICENSE  MINIO-ALTERNATIVES.md  MINIO-FIX-LINUX.md  MINIO-LINUX-QUICKSTART.md  MINIO-STANDALONE-SETUP.md  ON-PREMISE-CONFIG.md  README.md  SETUP-GUIDE.md  STANDALONE-DEPLOYMENT.md  STORAGE-FALLBACK-GUIDE.md  compose.yaml  install-minio-linux.sh  knip.json  netlify.toml  package.json  pnpm-lock.yaml  stylelint.config.mjs  turbo.json
apps/api/: .gitignore  Dockerfile  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260305_0001_initial_core_schema.py  20260305_0002_verification_results_run_context.py  20260305_0003_run_observability_indexes.py  20260305_0004_report_artifacts.py  20260406_0005_report_factory_foundation.py  20260408_0006_connector_support_contract.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/auth/: __init__.py  dependencies.py  roles.py
apps/api/app/core/: __init__.py  settings.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  core.py
apps/api/app/orchestration/: __init__.py  checkpoint_store.py  executor.py  graph_scaffold.py  state.py
apps/api/app/schemas/: __init__.py  auth.py  catalog.py  dashboard.py  documents.py  health.py  integrations.py  retrieval.py  runs.py
apps/api/app/services/: __init__.py  blob_storage.py  connector_contract.py  document_intelligence.py  indexing_pipeline.py  integrations.py  job_queue.py  ocr_pipeline.py  report_context.py  report_factory.py  report_factory_template.html.jinja  report_pdf.py  retrieval.py  search_index.py  storage.py  verifier.py
apps/api/tests/: conftest.py  test_alembic_migrations.py  test_auth.py  test_catalog.py  test_dashboard.py  test_db_session.py  test_documents.py  test_health.py  test_indexing_pipeline.py  test_integrations.py  test_models.py  test_ocr_pipeline.py  test_orchestration_executor.py  test_retrieval.py  test_runs.py  test_settings_policy.py  test_verifier_service.py  test_workflow_scaffold.py
apps/connector-agent/: README.md  pyproject.toml
apps/connector-agent/connector_agent/: __init__.py  client.py  config.py  core.py  docker_runner.py  windows_service_runner.py
services/worker/: .gitignore  Dockerfile  README.md  pyproject.toml
services/worker/tests/: conftest.py  test_jobs.py  test_worker_settings.py
services/worker/worker/: __init__.py  app.py  jobs.py  run_once.py
services/worker/worker/core/: __init__.py  (+1 more)
(+123 files in other folders)
