[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veni-ai-sustainability-cockpit-worker"
version = "0.1.0"
description = "ARQ worker service for Veni AI Sustainability Cockpit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "arq>=0.26.3,<1.0.0",
  "redis>=5.2.0,<6.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "azure-storage-blob>=12.24.0,<13.0.0",
  "azure-identity>=1.19.0,<2.0.0",
  "azure-ai-documentintelligence>=1.0.2,<2.0.0",
  "azure-search-documents>=11.6.0,<12.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "pillow>=11.3.0,<12.0.0",
  "pypdf>=6.1.1,<7.0.0",
  "reportlab>=4.2.0,<5.0.0",
  "weasyprint>=66.0,<67.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*"]
